# flasksite123

./: .gitignore  app.py  pyproject.toml
static/css/: main.css
templates/: base.html  footer.html  index.html
