[tool.poetry]
name = "myjapanauto"
version = "0.1.0"
description = ""
authors = ["Krushovice <kickstar69@yandex.ru>"]


[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
black = "^24.4.2"
jinja2 = "^3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
